[project]
name = "tech-blog-backend"
version = "1.0.0"
description = "技术笔记博客后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatchling.build target.wheel]
packages = ["src"]